[package]
name = "beagle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
fryer = { path = "../fryer/" }
plotly = { version = "0.8.4", features = ["kaleido"] }
quick-xml = { version = "0.36.0", features=["serialize"] }
regex = "1.10.4"
serde = "1.0.203"
serde_json = "1.0.117"
