[package]
name = "beagle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
fryer = { path = "../fryer/" }
itertools = "0.13.0"
lazy_static = "1.5.0"
plotly = { version = "0.8.4", features = ["kaleido"] }
quick-xml = { version = "0.36.0", features=["serialize"] }
rand = "0.8.5"
regex = "1.10.4"
serde = "1.0.203"
serde_json = "1.0.117"
